updated 1-House Price changed the second block: from domino_data_sdk to ...
Pushed from Domino: https://fldfive8383.cs.domino.tech/workspace/ddl-alireza/DMM-quick-start?executionId=626331777b23f475da4bc1bd

--- a/1-House_Price_Prediction.ipynb
+++ b/1-House_Price_Prediction.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "#load the SDK to create a TrainingSet\n",
-    "from domino_data_sdk.trainingset import client, model"
+    "#from domino_data_sdk.trainingset import client, model # for older version of domino_data\n",
+    "from domino_data.training_sets import client, model"
    ]
   },
   {
