Updated 1-House_Price_Prediction.ipynb dataset_raw fixed
Pushed from Domino: https://fldfive8383.cs.domino.tech/workspace/ddl-alireza/DMM-quick-start?executionId=62633e467b23f475da4bc28a

--- a/1-House_Price_Prediction.ipynb
+++ b/1-House_Price_Prediction.ipynb
@@ -17,8 +17,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import explained_variance_score\n",
     "\n",
-    "import warnings  \n",
-    "warnings.filterwarnings('ignore')"
+    "#import warnings  \n",
+    "#warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Dropping id and date for regression\n",
-    "dataset = dataset.drop(['event_id', 'date'], axis=1)\n",
+    "dataset = dataset_raw.drop(['event_id', 'date'], axis=1)\n",
     "dataset.head()"
    ]
   },
